--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-    <script src="/js/bootstrap.min.js"></script>
-
-
-    <link rel="stylesheet" href="/css/index.css"/>
-    <title>Redux TodoMVC Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>React App</title>
   </head>
   <body>
-  
-    <div class="trello" id="root"></div>
-	    
-    </div>
+    <div id="root"></div>
   </body>
 </html>
